[gd_scene load_steps=3 format=3 uid="uid://bichnpjwmk5ia"]

[ext_resource type="Script" uid="uid://dgh5j84ko0uh3" path="res://Scripts/AI/Enemies/Static/Turret_AI_three_shot.gd" id="1_horer"]
[ext_resource type="PackedScene" uid="uid://ceop12rbcnfjy" path="res://Scenes/Bodies/Enemies/Static/Turret_three_shot.tscn" id="2_0exvb"]

[node name="Turret_three_shot" type="Node2D"]
script = ExtResource("1_horer")

[node name="Turret_body" parent="." groups=["Turret_three_shot"] instance=ExtResource("2_0exvb")]
rotation = 3.14159
scale = Vector2(1, -1)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="Turret_body"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(0, -9.4601)
scale = Vector2(21.5389, 4.44764)
enable_node_path = NodePath("../..")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.4
autostart = true

[connection signal="now_dead" from="Turret_body" to="." method="_on_turret_body_now_dead"]
[connection signal="reload_ended" from="Turret_body" to="." method="_on_reload_ended"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
